--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 					</div>
 					<div class="col-lg-4 mb-2">
 						<div class="card bg-warning">
-							<div class="card-body card-light">
-								<h5 class="text-white">每日平均访问次数</h5>
+							<div class="card-body text-white ">
+								<h5 class="card-light">每日平均访问次数</h5>
 								<p class="card-text display-3">3,123</p>
 							</div>
 						</div>
