--- a/tip.html
+++ b/tip.html
@@ -53,7 +53,7 @@
 				</ol>
 			</nav>
 			<div class="container-fluid">
-				<ul class="list-group list-group-flush ml-3 mr-3">
+				<ul class="list-group list-group-flush">
 					<li class="list-group-item">我需要操作的事项1</li>
 					<li class="list-group-item">我需要操作的事项2</li>
 					<li class="list-group-item">我需要操作的事项3</li>
