--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-4 mb-2">
-						<div class="card bg-success text-white ">
-							<div class="card-body ">
+						<div class="card bg-success">
+							<div class="card-body  text-white ">
 								<h5 class="card-light ">当前用户总数</h5>
 								<p class="card-text display-3">120,123</p>
 							</div>
@@ -72,7 +72,7 @@
 					</div>
 					<div class="col-lg-4 mb-2">
 						<div class="card bg-warning">
-							<div class="card-body text-white ">
+							<div class="card-body text-white">
 								<h5 class="card-light">每日平均访问次数</h5>
 								<p class="card-text display-3">3,123</p>
 							</div>
